add references to first blog

--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome?/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome?/index.html
@@ -106,6 +106,15 @@ Following code show another way to set the scrollbar thinner in Google Chrome:</
 
 <p>ps: if there is any mistake, please let me know.</p>
 
+<p><br><br></p>
+
+<h4>References</h4>
+
+<ul>
+<li><a href="https://css-tricks.com/almanac/properties/s/scrollbar-width/">css-tricks</a></li>
+<li><a href="https://www.w3schools.com/css/css_overflow.asp">w3schools</a></li>
+</ul>
+
     <hr>
     <div class="pagination">
       <ul>
