--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>How to make the native scrollbar thinner in Google Chrome?</title>
+    <title>How to make the native scrollbar thinner in Google Chrome</title>
   
     <meta name="author" content="Lan Chen">
 
@@ -64,7 +64,7 @@
 
       <div class="content">
         <div class="page-header">
-  <h1>How to make the native scrollbar thinner in Google Chrome? </h1>
+  <h1>How to make the native scrollbar thinner in Google Chrome </h1>
 </div>
 
 <div class="row">
@@ -105,8 +105,6 @@ Following code show another way to set the scrollbar thinner in Google Chrome:</
 </code></pre>
 
 <p>ps: if there is any mistake, please let me know.</p>
-
-<p><br><br></p>
 
 <h4>References</h4>
 
@@ -153,7 +151,7 @@ Following code show another way to set the scrollbar thinner in Google Chrome:</
   
   <div class="span4">
     <h4>Published</h4>
-    <div class="date"><span>2019-05-04</span></div>
+    <div class="date"><span>2019-05-06</span></div>
     <br>
     <h4>Categories</h4>
     <ul class="tag_box">
