improve vs connect remote project

--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -69,7 +69,10 @@
 
 <div class="row">
   <div class="span8">
-    <p>Most people known how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:</p>
+    <p><strong>Description:</strong><br />
+Add a native scrollbar to the project and make the scrollbar thinner..</p>
+
+<p>Most people known how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:</p>
 
 <ul>
 <li>visible - Default. The overflow is not clipped. The content renders outside the element&rsquo;s box<br /></li>
