--- a/default/Use-Visual-Studio-connect-a-remote-project/index.html
+++ b/default/Use-Visual-Studio-connect-a-remote-project/index.html
@@ -70,11 +70,12 @@
 <div class="row">
   <div class="span8">
     <p><strong>Description:</strong><br />
-Use Visual Studio &amp; server URL to connect a remote project.</p>
+Use Visual Studio &amp; server URL to connect all your remote projects from same server (the one you have access permission).<br />
+<br></p>
 
 <ol>
 <li><p>Click &lsquo;View&rsquo; -&gt; &lsquo;Team Explorer&rsquo;<br />
-<img src="/assets/media/2019-05-10-Use-Visual-Studio-connect-a-project/1.png" alt="" width="400"><br />
+<img src="/assets/media/2019-05-10-Use-Visual-Studio-connect-a-project/1.png" alt="" width="450"><br />
 <br></p></li>
 
 <li><p>Team Explorer shows as following picture<br />
