--- a/pages/index.html
+++ b/pages/index.html
@@ -76,6 +76,13 @@
   
 
 
+  <li><a href="/tags">Tags</a></li>
+
+
+
+  
+
+
   <li><a href="/about">About me</a></li>
 
 
@@ -97,7 +104,7 @@
   
 
 
-  <li><a href="/">Lan&#39;s Tech Notes</a></li>
+  <li><a href="/">Pages</a></li>
 
 
 
@@ -105,13 +112,6 @@
   <li class="active"><a href="/pages" class="active">Pages</a></li>
 
 
-
-
-
-  
-
-
-  <li><a href="/tags">Tags</a></li>
 
 
 
