update about page

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
       <div id="nameCard">
         <div style="text-align:center;">
           <p style="color: white; margin-top: 95px; align-self: center; font-size:3em;">Lan Chen</p>
-          <p style="color: white; margin-top: 25px; font-size:1.6em;">Software Developer</p>
+          <p style="color: white; margin-top: 25px; font-size:1.6em;">Software Developer Intern at Central Station Software</p>
           <div style="display: flex; justify-content: center; margin-top: 25px;">
               <a href="https://github.com/coderivy" target="_blank"> <img src="../assets/media/about/github.png" style="width:25px; height: 25px; margin-right: 20px;" alt="Github" /></a>
               <a href="https://www.linkedin.com/in/coderivy/" target="_blank"> <img src="../assets/media/about/linkin.jpg" style="width:25px; height: 25px;  margin-right: 20px;" alt="Linkin" /></a>
@@ -119,8 +119,8 @@
           <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
             <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="https://www.aimyplus.com/"  target="_blank">Central Station Software</a></p>
             <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Software Developer Intern, Dec. 2018 - Current</p>
-            <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em;"> Auckland, New Zealand</p>
-            <p style="margin-top: 0.3em;">Aimy.io is an industry leading company that provide cloud-based software management solutions to childcare centres.
+            <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em; "> Auckland, New Zealand</p>
+            <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">Aimy.io is an industry leading company that provide cloud-based software management solutions to childcare centres.
                My tean works on building management system for Homebased Childcare Organization and ECE Center. I am working as a Software developer mainly using C#, Vue.js, React.js, ASP.NET Core and SQL.  </p>
           </div>
         </div>
@@ -144,11 +144,11 @@
             <!-- </div> -->
             
             <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
-              <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="https://www.mi.com/"  target="_blank">Xiao Mi</a></p>
+              <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="https://www.mi.com/"  target="_blank">Xiao Mi Technology</a></p>
               <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Android Developer, Jun. 2014 - Otc. 2014</p>
-              <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em;"> Beijing, China</p>
-              <p style="margin-top: 0.3em;">Xiaomi is an internet company with smartphones and smart hardware connected by an IoT platform at its core. 
-                My team works on building android applicaion for internal management purpose. Such as assets and employee info management, industry hot news, weekly data report. </p>
+              <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em; line-height: 18pt;"> Beijing, China</p>
+              <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">Xiaomi is an internet company with smartphones and smart hardware connected by an IoT platform at its core. 
+                My team works on building android application for internal management purpose. Such as assets and employee info management, industry hot news, weekly data report. </p>
             </div>
           </div>
 
@@ -163,7 +163,7 @@
                 <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="http://english.gdut.edu.cn/"  target="_blank">Guangdong University of Technology </a></p>
                 <p style="margin-top: 0.3em; color: yellowgreen; font-size: 1.5em;">Diploma in Computer Science and Technology, Jan. 2010 – Jul. 2012</p>
                 <p style="font-weight: bold; opacity: 0.6; font-size: 1.5em;"> Guangzhou, China</p>
-                <p style="margin-top: 0.3em;">Average grade: B+</p>
+                <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">Average grade: B+</p>
               </div>
             </div>
 
@@ -188,7 +188,7 @@
               <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
                 <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="https://php.coderivy.com/"  target="_blank">Task Management System</a></p>
                 <p style="font-weight: bold; opacity: 0.5; margin-top: 0.5em; font-size: 1.5em;">Developed by:PHP, JavaScript, jQuery, Ajax  </p>
-                <p style="margin-top: 0.3em;">A system imitate form google calendar, use drag and drop event to assign jobs to different staff or change job’s starting time.
+                <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">A system imitate form google calendar, use drag and drop event to assign jobs to different staff or change job’s starting time.
 
                   </p>
               </div>
@@ -203,7 +203,7 @@
               <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
                 <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="https://site1.coderivy.com/"  target="_blank">QualityCaps</a></p>
                 <p style="font-weight: bold; opacity: 0.5; margin-top: 0.5em; font-size: 1.5em;">Developed by: PHP, Laravel and MySQL </p>
-                <p style="margin-top: 0.3em;">A system for online shopping and product management. In this website, customer can view products and place orders. 
+                <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">A system for online shopping and product management. In this website, customer can view products and place orders. 
                   Administrator able to create new orders, products, users or product categories.
                   </p>
               </div>
@@ -218,7 +218,7 @@
               <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
                 <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a href="https://dotnet.coderivy.com/"  target="_blank">QualityCaps</a></p>
                 <p style="font-weight: bold; opacity: 0.5; margin-top: 0.5em; font-size: 1.5em;">Developed by: C#, ASP.NET Core, JavaScript, Bootstrap. </p>
-                <p style="margin-top: 0.3em;">A system for online shopping and product management. In this website, customer can view products, search product by key word and place orders. 
+                <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">A system for online shopping and product management. In this website, customer can view products, search product by key word and place orders. 
                   Administrator able to do CRUD with orders, products, users, suppliers or product categories. The system also offered customer register, as well as use google or facebook account login.
                   </p>
               </div>
