post -> app.model -> namespace should be unique

--- a/about/index.html
+++ b/about/index.html
@@ -313,7 +313,7 @@
 
         <div style="display: flex; flex-direction: column; margin-left: 2em; width: 70%;">
           <p style="color: rgba(0, 162, 255, 0.589); margin-top: 5%; font-size: 2.3em;"><a
-              href="https://github.com/coderivy/TowerOfHanoi" target="_blank">The Tower of Hanoi</a></p>
+              href="https://github.com/coderivy/TowerOfHanoi" target="_blank">Windows Form App. -- The Tower of Hanoi</a></p>
           <p style="font-weight: bold; opacity: 0.5; margin-top: 0.5em; font-size: 1.5em;">Developed by: C#, .NET
           </p>
           <p style="margin-top: 0.3em; line-height: 18pt; font-size: 1.1em; opacity: 0.8;;">This is a game -- The Tower
