--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -70,9 +70,9 @@
 <div class="row">
   <div class="span8">
     <p><strong>Description:</strong><br />
-Add a native scrollbar to the project and make the scrollbar thinner..</p>
+Add a native scrollbar to the project and make the scrollbar thinner.</p>
 
-<p>Most people known how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:</p>
+<p>Most people knew how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:</p>
 
 <ul>
 <li>visible - Default. The overflow is not clipped. The content renders outside the element&rsquo;s box<br /></li>
@@ -84,7 +84,7 @@ Add a native scrollbar to the project and make the scrollbar thinner..</p>
 <p>Please <strong>note</strong> that: the <strong>overflow</strong> property only works for block elements with a specified height.
 <br><br></p>
 
-<p>First and the easiest way to set a scrollbar&rsquo;s width is to use <strong>scrollbar-width</strong> property. <strong>scrollbar-width</strong> is a property that controls the width or &ldquo;thickness&rdquo; of a scrollbar. <strong>scrollbar-width</strong> accepts the following values:</p>
+<p>First and the easiest way to set a scrollbar’s width is to use the <strong>scrollbar-width</strong> property. <strong>scrollbar-width</strong> is a property that controls the width or “thickness” of a scrollbar. <strong>scrollbar-width</strong> accepts the following values:</p>
 
 <ul>
 <li>auto is the default value and will render the standard scrollbars for the user agent.</li>
@@ -93,9 +93,9 @@ Add a native scrollbar to the project and make the scrollbar thinner..</p>
 <li><code>&lt;length&gt;</code> is being debated, but (if added) would be a maximum width of the scrollbar.</li>
 </ul>
 
-<p>More details, please visit <a href="https://css-tricks.com/almanac/properties/s/scrollbar-width/">css-tricks</a>. Please <strong>note</strong> that <strong>scrollbar-width</strong> supports higher version browser.
+<p>More details, please visit <a href="https://css-tricks.com/almanac/properties/s/scrollbar-width/">css-tricks</a>. Please <strong>note</strong> that <strong>scrollbar-width</strong> supports a higher version browser.
 <br><br>
-Following code show another way to set the scrollbar thinner in Google Chrome:</p>
+Following code shows another way to set the scrollbar thinner in Google Chrome:</p>
 
 <pre><code>.your-class-name {
   height: 100%; 
@@ -160,7 +160,7 @@ Following code show another way to set the scrollbar thinner in Google Chrome:</
     <ul class="tag_box">
     
       <li>
-  <a href="/categories/#default-ref">default <span>5</span></a>
+  <a href="/categories/#default-ref">default <span>6</span></a>
 </li>
     
     </ul>
