--- a/default/Use-Visual-Studio-connect-a-remote-project/index.html
+++ b/default/Use-Visual-Studio-connect-a-remote-project/index.html
@@ -70,7 +70,7 @@
 <div class="row">
   <div class="span8">
     <p><strong>Description:</strong><br />
-Use Visual Studio &amp; server URL to connect all your remote projects from same server (the one you have access permission).<br />
+Use Visual Studio &amp; server URL to connect all your remote projects from the same server (the one you have access permission).<br />
 <br></p>
 
 <ol>
@@ -78,7 +78,7 @@ Use Visual Studio &amp; server URL to connect all your remote projects from same
 <img src="/assets/media/2019-05-10-Use-Visual-Studio-connect-a-project/1.png" alt="" width="450"><br />
 <br></p></li>
 
-<li><p>Team Explorer shows as following picture<br />
+<li><p>Team Explorer shows as the following picture<br />
 click the &lsquo;Manage Connection&rsquo; button (the green button) in the top<br />
 <img src="/assets/media/2019-05-10-Use-Visual-Studio-connect-a-project/2.png" alt="" width="400"><br />
 <br></p></li>
@@ -88,7 +88,7 @@ after a while, all projects from the server which you have permission will show 
 <img src="/assets/media/2019-05-10-Use-Visual-Studio-connect-a-project/3.png" alt="" width="400"><br />
 <br></p></li>
 
-<li><p>Choose a project you want to connect and click &lsquo;Connect&rsquo; button in the bottom<br />
+<li><p>Choose a project you want to connect and click the &lsquo;Connect&rsquo; button in the bottom<br />
 <img src="/assets/media/2019-05-10-Use-Visual-Studio-connect-a-project/4.png" alt="" width="400">
 <br></p></li>
 
@@ -142,7 +142,7 @@ Choose a folder which you want to save the code and click &lsquo;clone&rsquo; to
     <ul class="tag_box">
     
       <li>
-  <a href="/categories/#default-ref">default <span>5</span></a>
+  <a href="/categories/#default-ref">default <span>6</span></a>
 </li>
     
     </ul>
