--- a/default/Git-clone-authentication-failed/index.html
+++ b/default/Git-clone-authentication-failed/index.html
@@ -108,7 +108,9 @@ input your repository server URL, username, and password (<strong>Note:</strong>
 <p><img src="/assets/media/2019-05-07-Authentication-failed-when-using-git-cloning-repository/4.png" alt="" width="600"><br />
 <br><br></p>
 
-<p>After adding this generic credential, you don’t have to input the username &amp; password for all repositories form this server.</p>
+<p>After adding this generic credential, you don’t have to input the username &amp; password for all repositories form this server.<br><br></p>
+
+<p>Any feedback is welcome! :)  <br><br></p>
 
     <hr>
     <div class="pagination">
