--- a/default/Git-notes/index.html
+++ b/default/Git-notes/index.html
@@ -131,13 +131,16 @@ Delete the most recent commit, <strong>destroying</strong> the work you&rsquo;ve
 show all branches the repository has, including the branches you never used<br><br></p>
 
 <p><code>git checkout BranchName</code>
-switch to named branche<br><br></p>
+switch to named branch<br><br></p>
 
 <p><code>Git branch -D BranchName</code>
-delete named branche<br><br></p>
+delete named branch<br><br></p>
 
 <p><code>Git merge BranchName</code>
-merge branche (<strong>Note</strong> the BranchName should be the one your want fetch data from and your current branch should be the one you want get more data)<br><br></p>
+merge branch (<strong>Note</strong> the BranchName should be the one your want fetch data from and your current branch should be the one you want get more data)<br><br></p>
+
+<p><br><br>
+Any feedback is welcome! :)  <br><br></p>
 
     <hr>
     <div class="pagination">
