--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -107,7 +107,8 @@ Following code shows another way to set the scrollbar thinner in Google Chrome:<
 }
 </code></pre>
 
-<p>ps: if there is any mistake, please let me know.</p>
+<p><br><br>
+Any feedback is welcome! :)  <br><br></p>
 
 <h4>References</h4>
 
