--- a/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
+++ b/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
@@ -125,7 +125,8 @@ p.c {
 <p>And, here is the outcome,</p>
 
 <p><img src="/assets/media/2019-06-10-Three-ways-to-break-a-long-word-in-a-small-container/1.png" alt="" width="600">
-<br><br></p>
+ <br><br>
+Any feedback is welcome! :)  <br><br></p>
 
 <h4>References</h4>
 
