--- a/default/Use-Visual-Studio-connect-a-remote-project/index.html
+++ b/default/Use-Visual-Studio-connect-a-remote-project/index.html
@@ -98,6 +98,9 @@ Choose a folder which you want to save the code and click &lsquo;clone&rsquo; to
 <br></p></li>
 </ol>
 
+<p><br><br>
+Any feedback is welcome! :)  <br><br></p>
+
     <hr>
     <div class="pagination">
       <ul>
