--- a/default/app.model--namespace-should-be-unique/index.html
+++ b/default/app.model--namespace-should-be-unique/index.html
@@ -91,8 +91,8 @@ After I change the value for the ‘namespace’, the error gone.</p>
 
 <p><br>
 If you want to save some energy for this problem, you can just ignore ‘namespace’ in the model file, it will automatically name your model’s namespace as your file name.<br><br>
-<br>
-ps: if there is any mistake, please let me know.</p>
+ <br><br>
+Any feedback is welcome! :)  <br><br></p>
 
     <hr>
     <div class="pagination">
