update font size

--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 
   <!-- Le styles -->
   <link href="/assets/twitter/stylesheets/bootstrap.min.css" type="text/css" rel="stylesheet" media="all">
-  <link href="/assets/twitter/stylesheets/style.css" type="text/css" rel="stylesheet" media="all">
+  <!-- <link href="/assets/twitter/stylesheets/style.css" type="text/css" rel="stylesheet" media="all"> -->
   <link href="/assets/twitter/widgets/google_prettify/stylesheets/twitter-bootstrap.css" type="text/css"
     rel="stylesheet" media="all">
 
