--- a/default/Git-clone-authentication-failed/index.html
+++ b/default/Git-clone-authentication-failed/index.html
@@ -69,7 +69,8 @@
 
 <div class="row">
   <div class="span8">
-    <p><strong>Description:</strong><br />
+    <p><br>
+<strong>Description:</strong>  <br>
 Use “git clone my_repository_url” to clone a project form remote to local in Windows 10 Pro’s Terminal.</p>
 
 <p><strong>Result:</strong><br />
