--- a/default/Git-notes/index.html
+++ b/default/Git-notes/index.html
@@ -139,8 +139,7 @@ delete named branch<br><br></p>
 <p><code>Git merge BranchName</code>
 merge branch (<strong>Note</strong> the BranchName should be the one your want fetch data from and your current branch should be the one you want get more data)<br><br></p>
 
-<p><br><br>
-Any feedback is welcome! :)  <br><br></p>
+<p>Any feedback is welcome! :)  <br><br></p>
 
     <hr>
     <div class="pagination">
