--- a/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
+++ b/default/Three-ways-to-break-a-long-word-in-a-small-container/index.html
@@ -69,7 +69,8 @@
 
 <div class="row">
   <div class="span8">
-    <p><strong>Description:</strong><br />
+    <p><br>
+<strong>Description:</strong>  <br>
 I met a problem when I fetch data from the database for a table, there is an unusual long string text inside the data, and the table column has a relative width so the data just stretched the  column. I found 3 ways to break an unusual long word in a relatively small container, there are,</p>
 
 <pre><code> word-wrap:break-word;  word-break: break-all; &amp; overflow-wrap: break-word;
