--- a/default/Tips-for-SPA-optimization---Vue.js/index.html
+++ b/default/Tips-for-SPA-optimization---Vue.js/index.html
@@ -74,8 +74,7 @@
 
 <p>Useful tips for Vue.js Single Page Application optimization, <a href="https://medium.com/binarcode/tips-for-building-fast-and-light-vue-js-spa-7a83407d4bc3">Tips for building fast and light Vue.js SPA</a></p>
 
-<p><br>
-<strong>Note:</strong> for people who fist visit medium.com, you might have to login with a google or facebook account, and re-click the link.
+<p><strong>Note:</strong> for people who fist visit medium.com, you might have to login with a google or facebook account, and re-click the link.
 <br><br></p>
 
     <hr>
