--- a/default/Use-Visual-Studio-connect-a-remote-project/index.html
+++ b/default/Use-Visual-Studio-connect-a-remote-project/index.html
@@ -69,7 +69,8 @@
 
 <div class="row">
   <div class="span8">
-    <p><strong>Description:</strong><br />
+    <p><br>
+<strong>Description:</strong>  <br>
 Use Visual Studio &amp; server URL to connect all your remote projects from the same server (the one you have access permission).<br />
 <br></p>
 
