--- a/default/app.model--namespace-should-be-unique/index.html
+++ b/default/app.model--namespace-should-be-unique/index.html
@@ -90,9 +90,9 @@ copy and rename the file, I didn&rsquo;t change the value for &lsquo;namespace&r
 After I change the value for the ‘namespace’, the error gone.</p>
 
 <p><br>
-If you want to save some energy for this problem, you can just ignore ‘namespace’ in the model file, it will automatically name your model’s namespace as your file name.<br><br>
- <br><br>
-Any feedback is welcome! :)  <br><br></p>
+If you want to save some energy for this problem, you can just ignore ‘namespace’ in the model file, it will automatically name your model’s namespace as your file name.<br><br></p>
+
+<p>Any feedback is welcome! :)  <br><br></p>
 
     <hr>
     <div class="pagination">
