--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -69,28 +69,29 @@
 
 <div class="row">
   <div class="span8">
-    <p><strong>Description:</strong><br />
+    <p><br>
+<strong>Description:</strong>  <br>
 Add a native scrollbar to the project and make the scrollbar thinner.</p>
 
-<p>Most people knew how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:</p>
+<p>Most people knew how to add a scrollbar to your pages when the content of an element is too big to fit in the specified area. So, I will just give a brief introduction to CSS <strong>overflow</strong> property. <strong>overflow</strong> property has the following values:  <br><br></p>
 
 <ul>
 <li>visible - Default. The overflow is not clipped. The content renders outside the element&rsquo;s box<br /></li>
 <li>hidden - The overflow is clipped, and the rest of the content will be invisible<br /></li>
 <li>scroll - The overflow is clipped, and a scrollbar is added to see the rest of the content<br /></li>
-<li>auto - Similar to scroll, but it adds scrollbars only when necessary<br /></li>
+<li>auto - Similar to scroll, but it adds scrollbars only when necessary<br />
+<br>
+Please <strong>note</strong> that: the <strong>overflow</strong> property only works for block elements with a specified height.
+<br><br></li>
 </ul>
 
-<p>Please <strong>note</strong> that: the <strong>overflow</strong> property only works for block elements with a specified height.
-<br><br></p>
-
-<p>First and the easiest way to set a scrollbar’s width is to use the <strong>scrollbar-width</strong> property. <strong>scrollbar-width</strong> is a property that controls the width or “thickness” of a scrollbar. <strong>scrollbar-width</strong> accepts the following values:</p>
+<p>First and the easiest way to set a scrollbar’s width is to use the <strong>scrollbar-width</strong> property. <strong>scrollbar-width</strong> is a property that controls the width or “thickness” of a scrollbar. <strong>scrollbar-width</strong> accepts the following values:   <br><br></p>
 
 <ul>
 <li>auto is the default value and will render the standard scrollbars for the user agent.</li>
 <li>thin will tell the user agent to use thinner scrollbars, when applicable.</li>
 <li>none will hide the scrollbar completely, without affecting the element&rsquo;s scrollability.</li>
-<li><code>&lt;length&gt;</code> is being debated, but (if added) would be a maximum width of the scrollbar.</li>
+<li><code>&lt;length&gt;</code> is being debated, but (if added) would be a maximum width of the scrollbar. <br><br></li>
 </ul>
 
 <p>More details, please visit <a href="https://css-tricks.com/almanac/properties/s/scrollbar-width/">css-tricks</a>. Please <strong>note</strong> that <strong>scrollbar-width</strong> supports a higher version browser.
