--- a/default/React-Uncaught-Invariant-Violation/index.html
+++ b/default/React-Uncaught-Invariant-Violation/index.html
@@ -93,8 +93,7 @@ While rendering a list data, I got an error: ‘react-dom.development.js:55 Unca
 <img src="/assets/media/2019-06-03-React-Uncaught-Invariant-Violation/4.png" alt="" width="600">
 <br><br></p>
 
-<p><br><br>
-Any feedback is welcome! :)  <br><br></p>
+<p>Any feedback is welcome! :)  <br><br></p>
 
     <hr>
     <div class="pagination">
