--- a/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
+++ b/default/How-to-make-the-native-scrollbar-thinner-in-Google-Chrome/index.html
@@ -218,3 +218,20 @@ Any feedback is welcome! :)  <br><br></p>
 </script>
   </body>
 </html>
+
+<script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+	$(function() {
+	var _gor_compile_ver = 0;
+	function _sc(data) {
+		if (parseInt(data) != _gor_compile_ver) {
+			location.reload(true);
+		} else {
+			setTimeout(_gor_f5, 1000);
+		}
+	}
+	function _gor_f5() {$.get("/_api/f5?ver="+_gor_compile_ver, "", _sc)};
+	$.get("/_api/f5", "",  function(data) {_gor_compile_ver = parseInt(data);setTimeout(_gor_f5, 1000);});
+	});
+</script>
+	
